--- a/summaries/final report/Latex_version/Report.tex
+++ b/summaries/final report/Latex_version/Report.tex
@@ -77,61 +77,62 @@ Using various bioinformatics tools to analyze publicly available multi-omics dat
 
 \section*{Results}
 
-Enhancer-associated lincRNAs (elincRNAs) in human lymphoblastoid cell lines (LCLs) were identified from a set of LCL-expressed lincRNAs (Tan et al, 2016, under revision). They were defined based on overlap with LCL enhancers predicted from histone marks (GM12878, \cite{ENCODEProject2012}⁠) at their putative promoter regions, estimated as 1kb upstream from their transcriptional start site. LincRNAs whose promoter region also overlapped other predicted regulatory elements, specifically active promoters \cite{ENCODEProject2012}⁠, in LCLs were excluded from the analysis (elincRNAs=236, other LCL-expressed lincRNAs=1756).
+Enhancer-associated lincRNAs (elincRNAs) in human lymphoblastoid cell lines (LCLs) were identified from a set of LCL-expressed lincRNAs (Tan et al, 2016, under revision). They were defined based on overlap between their putative promoter regions (estimated as 1kb upstream from their transcriptional start site) and enhancers predicted from histone marks in LCL (GM12878, \cite{ENCODEProject2012}⁠). LincRNAs whose promoter region also overlapped other predicted regulatory elements, specifically active promoters \cite{ENCODEProject2012}⁠, in LCLs were excluded from the analysis (elincRNAs=236, other LCL-expressed lincRNAs=1756).
 
 \subsection*{elincRNAs show similar expression profiles as other lincRNAs}
 
-Unlike most enhancer-associated noncoding RNAs (eRNAs) which are often transcribed bidirectionally and then rapidly degraded by the nuclear exosome \cite{Darrow2013} \cite{Lam2014}⁠, elincRNAs are more stable and preferentially transcribed in one direction, and are often spliced and polyadenylated \cite{Marques2013a}⁠. 
-First, to investigate if LCL-expressed elincRNAs share similar expression profiles as the lowly expressed eRNAs relative to other expressed genes, I compared  their expression levels to that of other lincRNAs and protein-coding genes (Figure \ref{charac_elinc}A). I found that elincRNAs are not more lowly expressed that are other lincRNAs in human LCLs (GM12878, two-tailed Mann-Whitney U test, $p=0.258$), suggesting elincRNAs may have distinct properties compared to other enhancer-associated transcripts. Investigating the tissue specificity of elincRNAs revealed no significant difference from other lincRNAs either, although their median tissue specificity index ($\tau$) is slightly higher (two-tailed Mann-Whitney U test, $p=0.38$, Figure \ref{charac_elinc}B).
+Most enhancer-associated noncoding RNAs (eRNAs) are often transcribed bidirectionally and then rapidly degraded by the nuclear exosome, which makes them hard to detect due to their low expression levels \cite{Darrow2013} \cite{Lam2014}⁠. In contrast, elincRNAs are more stably and preferentially transcribed in a single direction, and are often spliced and polyadenylated \cite{Marques2013a}⁠. 
+First, to investigate if LCL-expressed elincRNAs share similar expression profiles relative to other expressed genes as the lowly expressed eRNAs, I compared  their expression levels to that of other lincRNAs and protein-coding genes (Figure \ref{charac_elinc}A). I found that elincRNAs are expressed at no more lower levels compared to other lincRNAs in human LCLs (GM12878, two-tailed Mann-Whitney U test, $p=0.258$). In addition, contrary to the highly tissue specific eRNAs \cite{Wu2014}, elincRNAs are no differently tissue-specific from other lincRNAs either, although their median tissue specificity index ($\tau$) is slightly higher (two-tailed Mann-Whitney U test, $p=0.38$, Figure \ref{charac_elinc}B). These results suggest that elincRNAs may have distinct properties relative to other enhancer-associated transcripts.
 
 \subsection*{elincRNA transcripts are less conserved than other lincRNAs}
 
-To gain insights into elincRNAs evolution, I investigated the nucleotide conservation of their exons in primates and placental mammals using phastCons scores \cite{Siepel2005}⁠, a measure of nucleotide conservation (Methods). I found that exons of elincRNAs are less conserved than other LCL-expressed lincRNAs (two-tailed Mann-Whitney U test, mammals: $p<1e-07$, primates: $p<1e-05$) as well as  protein coding genes (two-tailed Mann-Whitney U test, mammals: $p<1e-97$, primates: $p<1e-86$) (Figure \ref{charac_elinc}C). 
+To gain insights into the molecular evolution of elincRNAs, I investigated the nucleotide conservation of their exons in primates and placental mammals using phastCons scores \cite{Siepel2005}⁠, a measure of nucleotide conservation (Methods). I found that exons of elincRNAs are less conserved than other LCL-expressed lincRNAs (two-tailed Mann-Whitney U test, mammals: $p<1e-07$, primates: $p<1e-05$) as well as  protein coding genes (two-tailed Mann-Whitney U test, mammals: $p<1e-97$, primates: $p<1e-86$) (Figure \ref{charac_elinc}C). 
 
 Interestingly, a recent study of a set of trait-relevant and enhancer-associated lincRNAs showed that although exons of these lincRNAs did not seem to have evolved under purifying selection relative to other LCL-expressed lincRNAs across mammalian and primate evolution, their sequences are constraint specifically during recent human evolution (Tan et al, 2016, under revision). Therefore, although my result may suggest that elincRNA transcripts were not evolving under constraint across broad mammalian evolution, their conservation across modern human evolution remains to be investigated.
 
-\subsection*{elincRNAs promoter regions co-localize with loop anchors and cohesin binding}
+\subsection*{elincRNAs promoter regions co-localize with loop anchors and cohesin binding sites}
 
-Next, to examine whether elincRNAs are associated with the regulation of chromosomal architecture, I investigated their co-localization with loop anchors where enhancer-promoter gene regulatory interactions occur \cite{Ji2016}. These regulatory regions are essential to establish chromosomal interactions within topologically associating domains (TADs). I compared the overlap of elincRNAs with these regions relative to what would be expected if these loci were randomly distributed across the intergenic regions of the genome (Methods). I found that elincRNAs are significantly enriched at LCL loop anchors (fold enrichment = 2.79, $q=1e-04$, Figure \ref{enrich_elinc}A).  
+Next, to examine whether elincRNAs are associated with the regulation of chromosomal architecture, I investigated their co-localization with loop anchors, where enhancer-promoter gene regulatory interactions are frequent \cite{Ji2016}. These regulatory regions are essential to establish chromosomal interactions within topologically associating domains (TADs). I compared the overlap of elincRNAs with these regions relative to what would be expected if these loci were randomly distributed across the intergenic regions of the genome (Methods). I found that elincRNAs are significantly enriched at LCL loop anchors (fold enrichment = 2.79, $q=1e-04$, Figure \ref{enrich_elinc}A).
 
-Architectural proteins, such as cohesin and CTCF, are also enriched at the loop anchors within TADs \cite{Rao2014}⁠. Specifically, the cohesin protein-complex is important for cell type-specific intra-TAD gene regulation \cite{Hadjur2009}⁠. Teh transcription factor CTCF is another central player in the regulation of chromatin architecture and gene expression. According to a recent model \cite{Ji2016}⁠, loops mediated by CTCF or CTCF and cohesin collectively are important for the structural maintenance and have insulating properties, preventing interactions between TADs. In contrast, loops containing only cohesin binding sites are crucial in mediating regulatory chromosomal interactions. Cohesin depletion is associated with disrupted promoter-enhancer interactions within TADs \cite{Seitan2013}⁠.
 
-I found that elincRNA promoter regions are significantly enriched in CTCF and cohesin binding sites in LCL (binding of SMC3 and RAD21, 2 cohesin subunits, were used to identify cohesin binding, methods) (fold enrichment = 5.2 and 8.1, respectively, $q=1e-04$) This enrichment is greater than the one found for other lincRNAs (fold enrichment = 1.3 and 1.3, respectively, $q<0.05$, Figure \ref{enrich_elinc}C).
+Architectural proteins, such as cohesin and CTCF, are also enriched at the loop anchors \cite{Rao2014}⁠. Specifically, the cohesin protein-complex is important for cell type-specific intra-TAD gene regulation \cite{Hadjur2009}⁠. Teh transcription factor CTCF is another central player in the regulation of chromatin architecture and gene expression. According to a recent model \cite{Ji2016}⁠, loops mediated by CTCF only or CTCF and cohesin collectively are important for the structural maintenance of TADs. These loops act as insulators, preventing interactions between TADs. In contrast, loops containing only cohesin binding sites are crucial in mediating regulatory intra-chromosomal interactions, supported by the evidence that cohesin depletion is associated with disrupted promoter-enhancer interactions within TADs \cite{Seitan2013}⁠.
 
-As most binding sites for CTCF and cohesin overlap in the human genome (Figure \ref{enrich_elinc}E) and loops mediated by CTCF or cohesin independently, or both CTCF and cohesin collectively are thought to have different roles in chromosomal organization \cite{Ji2016}⁠, I further determined the independent enrichment of elincRNAs in CTCF and cohesin binding by obtaining mutually exclusive binding sites for these proteins. This revealed a greater enrichment of cohesin binding sites (Figure \ref{enrich_elinc}D) in elincRNA loci (fold enrichment = 13.1, $q=1e-04$) compared to CTCF binding sites (fold enrichment = 3.92, $q=1e-04$). This suggests elincRNAs are more frequently involved in the formation of cohesin-only loops, supporting their roles in modulating promoter-enhancer looping.
+I found that elincRNA promoter regions are significantly enriched in CTCF and cohesin binding sites in LCL (binding of SMC3 and RAD21, 2 cohesin subunits, were used to identify cohesin binding, Methods) (fold enrichment = 5.2 and 8.1, respectively, $q=1e-04$) This enrichment is greater than the one found for other lincRNAs (fold enrichment = 1.3 and 1.3, respectively, $q<0.05$, Figure \ref{enrich_elinc}C).
+
+As a large proportion of binding sites for CTCF and cohesin overlap in the human genome (Figure \ref{enrich_elinc}E) and since loops mediated by CTCF and cohesin collectively are thought to have different roles in chromosomal organization from those mediated only by cohesin \cite{Ji2016}⁠, I further determined the independent enrichment of elincRNAs in CTCF and cohesin binding, using mutually exclusive binding sites for these proteins. This revealed a greater enrichment of cohesin binding sites (Figure \ref{enrich_elinc}D) in elincRNA loci (fold enrichment = 13.1, $q=1e-04$) compared to that of CTCF (fold enrichment = 3.92, $q=1e-04$). This suggests elincRNAs are more frequently involved in the formation of cohesin-only loops, supporting their roles in modulating promoter-enhancer looping.
 
 \subsection*{elincRNAs promoter regions are not enriched at TAD boundaries}
 
-As loop anchors are frequently found at TAD boundaries, I next investigated whether similar enrichment would be observed for elincRNAs at TAD boundaries. Using Hi-C data (Figure \ref{TAD_loop_def}) I determined TAD boundary regions through a sliding diamond approach on contact matrices (Figure \ref{interact_hic}A, methods). Boundaries were extended from TAD borders until the sum of interactions in the diamond reached an arbitrary threshold (Figure \ref{boundary_ex}, methods). Although elincRNAs promoter regions are enriched at loop anchors relative to other LCL-expressed lincRNAs, no significant enrichment was found for these loci  at TAD boundaries (fold enrichment = 1.2, $q=0.08$, Figure \ref{enrich_elinc}B). Despite the absence of significant elincRNA enrichment at TAD boundaries, dividing TADs into 10 equally sized bins reveals that elincRNAs tend to be more frequently found near the end of the TADs and are depleted at the center of the TADs (bin 5, fold enrichment = 0.37, $q=0.06$) relative to other LCL-expressed lincRNAs (Figure \ref{enrich_elinc}F). The trend is consistent with their enrichment at loop anchors, which are enriched at TAD boundaries (fold enrichment =1.74 , $q<1e-3$, not shown).
+As loop anchors are frequently found at TAD boundaries, I next investigated whether similar enrichment would be observed for elincRNAs at TAD boundaries. Using Hi-C data (Figure \ref{TAD_loop_def}) I defined TAD boundaries as insulating regions (i.e. regions blocking contacts between elements upstream and elements downstream of them), extending inside TADs from the borders (Methods). Although elincRNAs promoter regions are enriched at loop anchors relative to other LCL-expressed lincRNAs, no significant enrichment was found for these loci  at TAD boundaries (fold enrichment = 1.2, $q=0.08$, Figure \ref{enrich_elinc}B). Despite the absence of significant elincRNA enrichment at TAD boundaries, dividing TADs into 10 equally sized bins reveals that elincRNAs tend to be more frequently found near the end of the TADs and are depleted in the center of the TADs (bin 5, fold enrichment = 0.37, $q=0.06$) relative to other LCL-expressed lincRNAs (Figure \ref{enrich_elinc}F). The trend is consistent with their enrichment at loop anchors, which are enriched at TAD boundaries (fold enrichment =1.74 , $q<1e-3$, not shown).
 
-This observed lack of significant enrichment  of elincRNAs at TAD boundaries may be a consequence of poor resolution of the current Hi-C technology, which is restrained to a maximum of 5kb \cite{Rao2014}⁠, as well as limitations in the method used to define boundary regions. Particularly, I defined TAD boundaries by extending inwards from borders of TADs (see methods for details), therefore all genes located outside of defined TADs but close to a TAD border are excluded from the analysis. 
+This lack of significant enrichment of elincRNAs at TAD boundaries may be a consequence of poor resolution of the current Hi-C technology, which is restrained to a maximum of 5kb \cite{Rao2014}⁠, as well as limitations in the method used to define boundary regions. Particularly, I defined TAD boundaries by only extending inwards from TAD borders (see methods for details), therefore all genes located outside of defined TADs but close to a TAD border would be unaccounted for in the analysis. 
 
 
 \subsection*{elincRNAs are associated with high DNA:DNA contacts within TADs}
 
-To further support their role in regulating promoter-enhancer contacts, I investigated whether elincRNAs are associated with regions with higher DNA:DNA interactions. To this end, I measured the average amount of contact in their respective TADs (Figure \ref{interact_hic}B, methods). I found that elincRNAs are frequently embedded within TADs with higher mean contacts compared to other lincRNAs in GM12878 (Median fold difference=1.24, two-tailed Mann-Whitney U test, $p<1e-04$, Figure \ref{TAD_TAD_contacts}). In addition, the fold difference in the amount of DNA contacts within TADs harbouring these elincRNA loci were less pronounced in 3 other cell lines relative to other LCL-expressed lincRNAs (Median fold difference=1.05, 1.07, and 1.04, p=$0.02, 0.04, 0.472$ in HUVEC, K562 and NHEK, respectively). This suggests that the association between elincRNA expression and chromosomal contacts is likely cell line-dependent. 
-Although my findings do not provide insights into the mechanisms through which elincRNAs may regulate chromosomal architecture, their associated high DNA:DNA contacts, together with their enrichment of cohesin binding suggest a role for elincRNAs in the modulation of promoter-enhancer looping within topologically associating domains.
+To further support their role in regulating promoter-enhancer contacts, I investigated whether elincRNAs are associated with regions with higher DNA:DNA interactions. To this end, I measured the average amount of contact within their respective TADs (Figure \ref{interact_hic}B, methods). I found that elincRNAs are frequently embedded within TADs with a higher mean density of contacts compared to other lincRNAs in GM12878 (Median fold difference=1.24, two-tailed Mann-Whitney U test, $p<1e-04$, Figure \ref{TAD_TAD_contacts}). In addition, the fold difference in the amount of DNA contacts within TADs that harbour these elincRNA loci relative to other LCL-expressed lincRNAs were less pronounced in 3 other cell lines (Median fold difference=1.05, 1.07, and 1.04, p=$0.02, 0.04, 0.472$ in HUVEC, K562 and NHEK, respectively). This suggests that the association between elincRNA expression and chromosomal contacts is likely cell line-dependent. 
+Although my findings do not provide insights into the molecular mechanisms through which elincRNAs may regulate chromosomal architecture, their associated high DNA:DNA contacts, together with their enrichment for cohesin binding suggest a role for elincRNAs in the modulation of enhancer-promoter looping within topologically associating domains.
 
 \section*{Figures, tables and legends}
 
 \begin{figure}[ht]
 	%\centering
 	\includegraphics[width=1\textwidth]{Figures/1_full_characterization_elincRNA.pdf}
-	\caption{ElincRNAs properties compared to other lincRNAs and protein-coding genes (PCG). Median values are displayed in the boxes. \textbf{A.} Distribution of median expression levels in LCL (GM12878). \textbf{B.} Distribution of tissue specificity index (Tau). Tau ranges between 0 (low specificity) and 1 (high specificity). \textbf{C.} Average exonic sequence conservation through mammalian and primate evolution (phastCons score). The green horizontal line represents the median conservation of ancestral repeats, which are used as a proxy for neutral evolution. Differences between distributions were tested using a two tailed Mann-Whitney test, $***P<0.001$; - not significant}
+	\caption{Properties of elincRNAs. Median values are displayed in the boxes. \textbf{A)} Distribution of median expression levels in LCL (GM12878), \textbf{B)} tissue specificity index (Tau) and \textbf{C)} Average exonic sequence conservation across mammalian and primate evolution of elincRNAs (orange), other LCL-expressed lincRNAs (blue) and protein-coding genes (purple). The tau index, a measure of gene expression tissue specificity, ranges from 0 (low specificity) to 1 (high specificity)\cite{Kryuchkova2015a}. Averaged phastCons score is used as a measure for nucleotide conservation \cite{Siepel2005}. The green horizontal line represents the median conservation of ancestral repeats, which are used as a proxy for neutral evolution. Differences between distributions were tested using a two tailed Mann-Whitney U test, $***P<0.001$; - not significant}
 	\label{charac_elinc}
 \end{figure}
 
 \begin{figure}[ht]
 	%\centering
 	\includegraphics[width=0.9\textwidth]{Figures/2_Enrichment.pdf}
-	\caption{Co-localization of elincRNAs with chromosomal architecture-associated features. Fold enrichment relative to random expectation: \textbf{A.}elincRNA and other lincRNAs promoter regions at loop anchors. \textbf{B.} elincRNA and other lincRNAs promoter regions at TAD boundaries. \textbf{C.} cohesin and CTCF peaks at elincRNA and other lincRNAs promoter regions. \textbf{D.} cohesin and CTCF exclusive peaks at elincRNA and other lincRNAs promoter regions.\textbf{E.} Proportions of overlap between RAD21, SMC3 and CTCF peaks in the human genome. \textbf{F.} Enrichment of elincRNA and other lincRNA promoter regions across TADs. Each bar represents a bin of 10\% TAD length. The log10 of q-values are put in color codes to give an estimation of the confidence in each value. q represents the p-value adjusted for multiple testing using FDR (methods).}
+	\caption{elincRNAs are enriched at loop anchors and cohesin binding sites. Fold enrichment relative to random expectation: \textbf{A.} elincRNA (orange) and other lincRNAs (blue) promoter regions at loop anchors. \textbf{B.} elincRNA and other lincRNAs promoter regions at TAD boundaries. \textbf{C.} all cohesin and CTCF peaks in human LCLs at elincRNA and other lincRNAs promoter regions. \textbf{D.} cohesin- and CTCF-only peaks at elincRNA and other lincRNAs promoter regions.\textbf{E.} Proportions of overlap between cohesin (RAD21 and SMC3) and CTCF peaks in human LCLs. \textbf{F.} Enrichment of elincRNA and other lincRNA promoter regions across TADs. Each bar represents a bin of 10\% TAD length. The log10 of q-values are put in color codes to give an estimation of the confidence in each value. q represents the p-value adjusted for multiple testing using FDR.}
 	\label{enrich_elinc}
 \end{figure}
 
 \begin{figure}[ht]
 	%\centering
 	\includegraphics[width=1\textwidth]{Figures/3_TAD_loop_definition.pdf}
-	\caption{Schematic representation of TADs and loops and typical patterns  observed in Hi-C matrices corresponding to these structures. \textbf{Center: } Example of a Hi-C matrix visualized in Juicebox (Durand et al., 2016)⁠. These matrices are symmetric and only upper triangles are therefore used to simplify the visualization. The darker pixels on the matrix contain more interactions. \textbf{Left: }Two separate TADs are observed as high interactions triangle on the matrix. These are examplified by regions of compacted DNA where frequent interactions occur, while interactions across TADs (i.e. between the blue and green triangles) are less frequent. A and B are the borders of the first TAD while C and D are the borders of the second TAD. Boundaries are the rectangles expanding inwards from the borders. \textbf{Right:} Representation of a loop with A and B being the anchors of the loop where strong contact is observed. Unlike TADs, the contact is not particularly high in the region between the two anchors, therefore loops are seen as a sharp increase in contacts deviating from the matrix diagonal. }
+	\caption{Schematic representation of topologically associating domains (TADs) and loops using Hi-C matrices. \textbf{A)} TADs and \textbf{B)} chromatin loop represented using a Hi-C intra-chromosomal contact matrix visualized as a symmetrical square matrix (center panel) using Juicebox (Durand et al., 2016)⁠ and as upper triangles, for simplified representation (side panels). Colour intensity of matrix pixels reflect the density of interactions. Left panel: Two TADs are illustrated as two triangular sub-matrices (triangles with blue and green outlines) where frequent interactions occur within these regions occur and where interactions across TADs are less frequent. These two TADs correspond to the two globular chromatin structures within the blue and green circles. a and b denote the borders of the first TAD while c and d represent the borders of the second TAD. Boundaries are the rectangles expanding inwards from the borders. Right: Chromosomal loop with a and b representing the loop anchors. Unlike TADs, strong DNA:DNA contact is observed only at the contacting point between loop anchors, while less frequent contact occurs in the region between the two anchor points. }
 	\label{TAD_loop_def}
 \end{figure}
 
