--- a/summaries/final report/Latex_version/firststep.bib
+++ b/summaries/final report/Latex_version/firststep.bib
@@ -535,7 +535,8 @@ abstract = {Spatial organization is an inherent property of the vertebrate genom
 author = {Lupi{\'{a}}{\~{n}}ez, Dar{\'{i}}o G. and Spielmann, Malte and Mundlos, Stefan},
 doi = {10.1016/j.tig.2016.01.003},
 file = {:home/cyril/Dropbox/Master/sem{\_}1/First step/Lupianez2016.pdf:pdf},
-isbn = {0168-9525 (Print)0168-9525 (Linking)},
+isbn = {0168-9525 (Print)
+0168-9525 (Linking)},
 issn = {13624555},
 journal = {Trends in Genetics},
 keywords = {CRISPR/Cas,Disease,Long-range regulation,Structural variations,TAD,Topologically associating domains},
@@ -569,7 +570,8 @@ abstract = {The organization and folding of chromatin within the nucleus can det
 author = {Matharu, Navneet and Ahituv, Nadav},
 doi = {10.1371/journal.pgen.1005640},
 file = {:home/cyril/Dropbox/Master/sem{\_}1/First step/Matharu2015.PDF:PDF},
-isbn = {1553-7404 (Electronic)1553-7390 (Linking)},
+isbn = {1553-7404 (Electronic)
+1553-7390 (Linking)},
 issn = {15537404},
 journal = {PLoS Genetics},
 number = {12},
@@ -692,7 +694,8 @@ year = {2014}
 abstract = {The work of Emil Heitz (1892--1965) laid one of the keystones of cytogenetics. Using a new in situ method, he established between 1928 and 1935 the longitudinal differentiation of chromosomes in euchromatin (genetically active) and heterochromatin (genetically inert). He recognized the association of satellited chromosomes with the formation of the nucleolus, co-discovered the giant salivary chromosomes of diptera, and arrived at a cytological and genetic concept of chromosome structure that has been found essentially correct to date. Yet, Emil Heitz did not gain due recognition by his contemporaries, suffered from the political disturbances of his time, and spent almost a lifetime in isolation, bolstered only by the conviction that his scientific work was significant.},
 author = {Passarge, E},
 file = {:home/cyril/Dropbox/Master/sem{\_}1/First step/ajhg00194-0014.pdf:pdf},
-isbn = {0002-9297 (Print)0002-9297 (Linking)},
+isbn = {0002-9297 (Print)
+0002-9297 (Linking)},
 issn = {0002-9297},
 journal = {American journal of human genetics},
 keywords = {Bibliography as Topic,Cytogenetics,France,Genetics,Genetics: history,Germany, West,Heterochromatin,History, 20th Century},
@@ -951,6 +954,20 @@ title = {{A long noncoding RNA maintains active chromatin to coordinate homeotic
 url = {http://www.ncbi.nlm.nih.gov/pubmed/21423168$\backslash$nhttp://www.pubmedcentral.nih.gov/articlerender.fcgi?artid=PMC3670758},
 volume = {472},
 year = {2011}
+}
+@article{Wu2014,
+    author = {Wu, Han AND Nord, Alex S. AND Akiyama, Jennifer A. AND Shoukry, Malak AND Afzal, Veena AND Rubin, Edward M. AND Pennacchio, Len A. AND Visel, Axel},
+    journal = {PLOS Genetics},
+    publisher = {Public Library of Science},
+    title = {Tissue-Specific RNA Expression Marks Distant-Acting Developmental Enhancers},
+    year = {2014},
+    month = {09},
+    volume = {10},
+    url = {http://dx.doi.org/10.1371%2Fjournal.pgen.1004610},
+    pages = {1-12},
+    abstract = {Author Summary Up to 80% of mammalian genomes are actively transcribed, producing large numbers of non-coding RNAs without known functions. One particularly exciting category of such non-coding transcripts are the recently discovered enhancer RNAs (eRNAs) transcribed from distant-acting enhancer elements. Studies in cell-based paradigms suggest a functional requirement for such eRNA in enhancer-mediated gene regulation. In this study, we explored the in vivo expression dynamics of tissue-specific non-coding RNAs in embryonic mouse tissues via in-depth transcriptome profiling. Our results suggest that enhancers may be a predominant function associated with differentially expressed non-coding loci across developing tissues, and that differential eRNA expression signatures from total RNA-Seq can be used to identify uncharacterized tissue-specific in vivo enhancers independent of known epigenomic marks. Our results highlight the widespread and potentially important role of eRNAs in orchestrating gene expression and the necessity for functional studies in interpreting genome-wide enhancer predictions.},
+    number = {9},
+    doi = {10.1371/journal.pgen.1004610}
 }
 @article{Yin2015,
 abstract = {Long noncoding RNAs (lncRNAs) have been implicated in controlling various aspects of embryonic stem cell (ESC) biology, although the functions of specific lncRNAs, and the molecular mechanisms through which they act, remain unclear. Here, we demonstrate discrete and opposing roles for the lncRNA transcript Haunt and its genomic locus in regulating the HOXA gene cluster during ESC differentiation. Reducing or enhancing Haunt expression, with minimal disruption of the Haunt locus, led to upregulation or downregulation of HOXA genes, respectively. In contrast, increasingly large genomic deletions within the Haunt locus attenuated HOXA activation. The Haunt DNA locus contains potential enhancers of HOXA activation, whereas Haunt RNA acts to prevent aberrant HOXA expression. This work reveals a multifaceted model of lncRNA-mediated transcriptional regulation of the HOXA cluster, with distinct roles for a lncRNA transcript and its genomic locus, while illustrating the power of rapid CRISPR/Cas9-based genome editing for assigning lncRNA functions.},
