--- a/summaries/final report/Latex_version/Report.tex
+++ b/summaries/final report/Latex_version/Report.tex
@@ -97,20 +97,20 @@ Next, to examine whether elincRNAs are associated with the regulation of chromos
 
 Architectural proteins, such as cohesin and CTCF, are also enriched at the loop anchors \cite{Rao2014}⁠. Specifically, the cohesin protein-complex is important for cell type-specific intra-TAD gene regulation \cite{Hadjur2009}⁠. Teh transcription factor CTCF is another central player in the regulation of chromatin architecture and gene expression. According to a recent model \cite{Ji2016}⁠, loops mediated by CTCF only or CTCF and cohesin collectively are important for the structural maintenance of TADs. These loops act as insulators, preventing interactions between TADs. In contrast, loops containing only cohesin binding sites are crucial in mediating regulatory intra-chromosomal interactions, supported by the evidence that cohesin depletion is associated with disrupted promoter-enhancer interactions within TADs \cite{Seitan2013}⁠.
 
-I found that elincRNA promoter regions are significantly enriched in CTCF and cohesin binding sites in LCL (binding of SMC3 and RAD21, 2 cohesin subunits, were used to identify cohesin binding, Methods) (fold enrichment = 5.2 and 8.1, respectively, $q=1e-04$) This enrichment is greater than the one found for other lincRNAs (fold enrichment = 1.3 and 1.3, respectively, $q<0.05$, Figure \ref{enrich_elinc}C).
+I found that elincRNA promoter regions are significantly enriched in CTCF and cohesin binding sites in LCL (binding of SMC3 and RAD21, 2 cohesin subunits, were used to identify cohesin binding, Methods) (fold enrichment = 5.2 and 8.1, respectively, $q=1e-04$) This enrichment is greater than the one found for other lincRNAs (fold enrichment = 1.3 and 1.3, respectively, $q<0.05$, Figure \ref{enrich_elinc}B).
 
-As a large proportion of binding sites for CTCF and cohesin overlap in the human genome (Figure \ref{enrich_elinc}E) and since loops mediated by CTCF and cohesin collectively are thought to have different roles in chromosomal organization from those mediated only by cohesin \cite{Ji2016}⁠, I further determined the independent enrichment of elincRNAs in CTCF and cohesin binding, using mutually exclusive binding sites for these proteins. This revealed a greater enrichment of cohesin binding sites (Figure \ref{enrich_elinc}D) in elincRNA loci (fold enrichment = 13.1, $q=1e-04$) compared to that of CTCF (fold enrichment = 3.92, $q=1e-04$). This suggests elincRNAs are more frequently involved in the formation of cohesin-only loops, supporting their roles in modulating promoter-enhancer looping.
+As a large proportion of binding sites for CTCF and cohesin overlap in the human genome (Figure \ref{enrich_elinc}C) and since loops mediated by CTCF and cohesin collectively are thought to have different roles in chromosomal organization from those mediated only by cohesin \cite{Ji2016}⁠, I further determined the independent enrichment of elincRNAs in CTCF and cohesin binding, using mutually exclusive binding sites for these proteins. This revealed a greater enrichment of cohesin binding sites (Figure \ref{enrich_elinc}D) in elincRNA loci (fold enrichment = 13.1, $q=1e-04$) compared to that of CTCF (fold enrichment = 3.92, $q=1e-04$). This suggests elincRNAs are more frequently involved in the formation of cohesin-only loops, supporting their roles in modulating promoter-enhancer looping.
 
 \subsection*{elincRNAs promoter regions are not enriched at TAD boundaries}
 
-As loop anchors are frequently found at TAD boundaries, I next investigated whether similar enrichment would be observed for elincRNAs at TAD boundaries. Using Hi-C data (Figure \ref{TAD_loop_def}) I defined TAD boundaries as insulating regions (i.e. regions blocking contacts between elements upstream and elements downstream of them), extending inside TADs from the borders (Methods). Although elincRNAs promoter regions are enriched at loop anchors relative to other LCL-expressed lincRNAs, no significant enrichment was found for these loci  at TAD boundaries (fold enrichment = 1.2, $q=0.08$, Figure \ref{enrich_elinc}B). Despite the absence of significant elincRNA enrichment at TAD boundaries, dividing TADs into 10 equally sized bins reveals that elincRNAs tend to be more frequently found near the end of the TADs and are depleted in the center of the TADs (bin 5, fold enrichment = 0.37, $q=0.06$) relative to other LCL-expressed lincRNAs (Figure \ref{enrich_elinc}F). The trend is consistent with their enrichment at loop anchors, which are enriched at TAD boundaries (fold enrichment =1.74 , $q<1e-3$, not shown).
+As loop anchors are frequently found at TAD boundaries, I next investigated whether similar enrichment would be observed for elincRNAs at TAD boundaries. Using Hi-C data (Figure \ref{TAD_loop_def}) I defined TAD boundaries as regions extending inside TADs from the borders until reaching local intra-TAD contacts that exceeds a cut-off threshold (see Methods for details). Although elincRNAs promoter regions are enriched at loop anchors relative to other LCL-expressed lincRNAs, no significant enrichment was found for these loci  at TAD boundaries (fold enrichment = 1.2, $q=0.08$, Figure \ref{enrich_boundaries}A). Despite the absence of significant elincRNA enrichment at TAD boundaries, dividing TADs into 10 equally sized bins reveals that elincRNAs tend to be more frequently found near the end of the TADs and are depleted in the center of the TADs (bin 5, fold enrichment = 0.37, $q=0.06$) relative to other LCL-expressed lincRNAs (Figure \ref{enrich_boundaries}B). The trend is consistent with their enrichment at loop anchors, which are enriched at TAD boundaries (fold enrichment =1.74 , $q<1e-3$, not shown).
 
 This lack of significant enrichment of elincRNAs at TAD boundaries may be a consequence of poor resolution of the current Hi-C technology, which is restrained to a maximum of 5kb \cite{Rao2014}⁠, as well as limitations in the method used to define boundary regions. Particularly, I defined TAD boundaries by only extending inwards from TAD borders (see methods for details), therefore all genes located outside of defined TADs but close to a TAD border would be unaccounted for in the analysis. 
 
 
 \subsection*{elincRNAs are associated with high DNA:DNA contacts within TADs}
 
-To further support their role in regulating promoter-enhancer contacts, I investigated whether elincRNAs are associated with regions with higher DNA:DNA interactions. To this end, I measured the average amount of contact within their respective TADs (Figure \ref{interact_hic}B, methods). I found that elincRNAs are frequently embedded within TADs with a higher mean density of contacts compared to other lincRNAs in GM12878 (Median fold difference=1.24, two-tailed Mann-Whitney U test, $p<1e-04$, Figure \ref{TAD_TAD_contacts}). In addition, the fold difference in the amount of DNA contacts within TADs that harbour these elincRNA loci relative to other LCL-expressed lincRNAs were less pronounced in 3 other cell lines (Median fold difference=1.05, 1.07, and 1.04, p=$0.02, 0.04, 0.472$ in HUVEC, K562 and NHEK, respectively). This suggests that the association between elincRNA expression and chromosomal contacts is likely cell line-dependent. 
+To further support their role in regulating promoter-enhancer contacts, I investigated whether elincRNAs are associated with regions with higher DNA:DNA interactions. To this end, I measured the average amount of contact within their respective TADs (Figure \ref{TAD_TAD_contacts}A, methods). I found that elincRNAs are frequently embedded within TADs with a higher mean density of contacts compared to other lincRNAs in GM12878 (Median fold difference=1.24, two-tailed Mann-Whitney U test, $p<1e-04$, Figure \ref{TAD_TAD_contacts}B). In addition, the fold difference in the amount of DNA contacts within TADs that harbour these elincRNA loci relative to other LCL-expressed lincRNAs were less pronounced in 3 other cell lines (Median fold difference=1.05, 1.07, and 1.04, p=$0.02, 0.04, 0.472$ in HUVEC, K562 and NHEK, respectively). This suggests that the association between elincRNA expression and chromosomal contacts is likely cell line-dependent. 
 Although my findings do not provide insights into the molecular mechanisms through which elincRNAs may regulate chromosomal architecture, their associated high DNA:DNA contacts, together with their enrichment for cohesin binding suggest a role for elincRNAs in the modulation of enhancer-promoter looping within topologically associating domains.
 
 \section*{Figures, tables and legends}
@@ -124,7 +124,7 @@ Although my findings do not provide insights into the molecular mechanisms throu
 
 \begin{figure}[ht]
 	%\centering
-	\includegraphics[width=0.9\textwidth]{Figures/2_Enrichment.pdf}
+	\includegraphics[width=0.9\textwidth]{Figures/2_enrich_anchor_prot.pdf}
 	\caption{elincRNAs are enriched at loop anchors and cohesin binding sites. Fold enrichment relative to random expectation: \textbf{A.} elincRNA (orange) and other lincRNAs (blue) promoter regions at loop anchors. \textbf{B.} elincRNA and other lincRNAs promoter regions at TAD boundaries. \textbf{C.} all cohesin and CTCF peaks in human LCLs at elincRNA and other lincRNAs promoter regions. \textbf{D.} cohesin- and CTCF-only peaks at elincRNA and other lincRNAs promoter regions.\textbf{E.} Proportions of overlap between cohesin (RAD21 and SMC3) and CTCF peaks in human LCLs. \textbf{F.} Enrichment of elincRNA and other lincRNA promoter regions across TADs. Each bar represents a bin of 10\% TAD length. The log10 of q-values are put in color codes to give an estimation of the confidence in each value. q represents the p-value adjusted for multiple testing using FDR.}
 	\label{enrich_elinc}
 \end{figure}
@@ -132,96 +132,66 @@ Although my findings do not provide insights into the molecular mechanisms throu
 \begin{figure}[ht]
 	%\centering
 	\includegraphics[width=1\textwidth]{Figures/3_TAD_loop_definition.pdf}
-	\caption{Schematic representation of topologically associating domains (TADs) and loops using Hi-C matrices. \textbf{A)} TADs and \textbf{B)} chromatin loop represented using a Hi-C intra-chromosomal contact matrix visualized as a symmetrical square matrix (center panel) using Juicebox (Durand et al., 2016)⁠ and as upper triangles, for simplified representation (side panels). Colour intensity of matrix pixels reflect the density of interactions. Left panel: Two TADs are illustrated as two triangular sub-matrices (triangles with blue and green outlines) where frequent interactions occur within these regions occur and where interactions across TADs are less frequent. These two TADs correspond to the two globular chromatin structures within the blue and green circles. a and b denote the borders of the first TAD while c and d represent the borders of the second TAD. Boundaries are the rectangles expanding inwards from the borders. Right: Chromosomal loop with a and b representing the loop anchors. Unlike TADs, strong DNA:DNA contact is observed only at the contacting point between loop anchors, while less frequent contact occurs in the region between the two anchor points. }
+	\caption{Schematic representation of topologically associating domains (TADs) and loops using Hi-C matrices. \textbf{A)} TADs and \textbf{B)} chromatin loop represented using a Hi-C intra-chromosomal contact matrix visualized as a symmetrical square matrix (center panel) using Juicebox (Durand et al., 2016)⁠ and as upper triangles, for simplified representation (side panels). Colour intensity of matrix pixels reflect the density of interactions. Left panel: Two TADs are illustrated as two triangular sub-matrices (triangles with blue and green outlines). Frequent interactions occur within these regions occur while interactions across TADs are less frequent. These two TADs correspond to the two globular chromatin structures within the blue and green circles. a and b denote the borders of the first TAD while c and d represent the borders of the second TAD. Boundaries are the rectangles expanding inwards from the borders. Right: Chromosomal loop with a and b representing the loop anchors. Unlike TADs, strong DNA:DNA contact is observed only at the contacting point between loop anchors, while less frequent contact occurs in the region between the two anchor points. }
 	\label{TAD_loop_def}
 \end{figure}
 
 \begin{figure}[ht]
 	%\centering
-	\includegraphics[width=1\textwidth]{Figures/4_interactions.pdf}
-	\caption{Visual representations of the algorithms used to compute contacts in Hi-C matrices. As they are symmetric, matrices are represented as upper triangles for simplicity reasons. \textbf{A.} Schematic representation of the algorithm used to measure insulation. A diamond (blue) of width w set to 100kb is slid on all position along the diagonal. For each position, the sum in the diamond is computed and later used to define boundaries. The sum in the diamond at position d (dotted line) represents a measure of all interactions across position d (i.e. between elements before and after position d). \textbf{B.} Method used to compute the mean of all interactions in TADs. Each TAD is taken as a submatrix (upper triangles of the submatrices are depicted in blue) and the mean value in the submatrix is computed. }
-	\label{interact_hic}
+	\includegraphics[width=1\textwidth]{Figures/4_enrich_boundaries.pdf}
+	\caption{elincRNAs are not enriched at TAD boundaries. \textbf{A.} Enrichment of elincRNA (orange) and other LCL-expressed lincRNAs (blue) promoter regions at TAD boundaries. \textbf{B.} Enrichment of elincRNA and other LCL-expressed lincRNA promoter regions across TADs. Each bar represent a bin of 10\% of TAD length. Colour of enrichment bars represent log10 of q-values. }
+	\label{enrich_boundaries}
 \end{figure}
 
 \begin{figure}[ht]
 	%\centering
-	\includegraphics[width=0.7\textwidth]{Figures/5_boundary_example.pdf}
-	\caption{Example of the calculated sums of interactions in vector V through a TAD. V value represents the value of interactions across each position in the TAD, while V index represent the position on the matrix diagonal, corresponding to a segment of 5kb in the genome. Boundaries were extended until they reach a threshold. The corresponding TAD in the Hi-C matrix is depicted above, visualized in Juicebox. The solid vertical lines represent the TAD borders, the horizontal dashed lines represent the threshold required to stop extending boundaries (methods) and the transparent areas represent the final boundaries. All blue elements relate to the left side, while all green elements relate to the right side.}
-	\label{boundary_ex}
-\end{figure}
-
-\begin{figure}[ht]
-	%\centering
-	\includegraphics[width=0.7\textwidth]{Figures/6_TAD_TAD_contact.pdf}
-	\caption{Density of DNA:DNA contact within TADs. The distribution of DNA:DNA contacts for TADs containing elincRNAs and other lincRNAs across different cell lines. Boxes are colored according to cell lines. Set of genes as defined in GM12878 are used for all comparisons. Two tailed Mann-Whitney test, $***P<0.001; *P<0.05$; $-$ non-significant}
+	\includegraphics[width=1\textwidth]{Figures/5_TAD_TAD_contact.pdf}
+	\caption{elincRNA-containing TADs are associated with significantly higher density of DNA:DNA contacts. \textbf{A.} Average of interactions within a TAD is computed by summing all DNA contacts within the TAD (blue triangles) and dividing by TAD length. \textbf{B.} Average contact frequency within TADs that encompass elincRNA and other LCL-expressed lincRNAs across four cell lines, GM12878 (orange), HUVEC(green), K562 (blue) and NHEK (purple). Set of genes as defined in GM12878 are used for all comparisons. Difference between groups are tested using the two tailed Mann-Whitney test, $***P<0.001; *P<0.05$; $-$ non-significant}
 	\label{TAD_TAD_contacts}
 \end{figure}
 
 \begin{figure}[ht]
 	%\centering
 	\includegraphics[width=1\textwidth]{Figures/7_merged_examples.pdf}
-	\caption{Genome browser view. \textbf{A.} elincRNA with putative promoter region in pink \textbf{B.} two other lincRNAs with putative promoter region in blue. The promoter regions of other lincRNAs have low levels of promoter (H3K4Me3) and enhancer (H3K4Me1) histone marks, while the promoter region of the elincRNA has high H3K4Me1, but low H3K4Me3. Gene bodies are depicted in green, with solid boxes as exons and thin lines as introns.}
+	\caption{Genome browser view of elincRNA and other lincRNA genes. \textbf{A.} elincRNA with putative promoter region in pink \textbf{B.} two other lincRNAs with putative promoter region in blue. The promoter regions of the elincRNA has low levels of promoter (H3K4Me3) and high level of enhancer (H3K4Me1) histone marks, while the promoter region of the other lincRNAs have low levels of both. Gene bodies are depicted in green, with solid boxes as exons and thin lines as introns. black arrows indicate direction of transcription}
 	\label{Genome_browser}
 \end{figure}
+
+\begin{figure}[ht]
+	%\centering
+	\includegraphics[width=1\textwidth]{Figures/6_interactions.pdf}
+	\caption{Visual representations of the algorithm used to compute TAD boundaries in Hi-C matrices. \textbf{A.} Schematic representation of the algorithm used to measure insulation. A diamond (blue) of width w set to 100kb is slid on all position ($d$) along the diagonal, representing a step-size of 5kb in the genome, given by the matrix resolution. For each position $d$, the sum in the blue diamond ($V_d$) is computed and later used to define boundaries. The sum in the diamond at position $d$ (red vertical dotted line) represents a measure of all interactions across position $d$ (i.e. elements upstream of $d$ contacting those downstream of $d$) at a maximum range of w (blue curves at the top). In other words, the diamond measures contacts between regions [d-w;d] (upstream) and [d;d+w] (downstream) (blue), excluding interactions happening inside those regions (orange). \textbf{B.} Example of the calculated sums of interactions in vector $V$ through a TAD. $V_d$ represents the sum of interactions across position d (i.e. the sum in the diamond at position $d$, stored as the $d^{th}$ value of vector $V$), while $d$ are the positions along the matrix diagonal (corresponding to 5kb segments of the genome). Boundaries were extended inwards from TAD borders until $V_d$ reached an arbitrary threshold defined as the value of $V$ at the border, plus 10\% of the maximum value of $V$ inside the TAD. The solid vertical lines represent the TAD borders, the horizontal dashed lines represent the thresholds required to stop extending boundaries and the transparent areas represent the final boundaries. All blue elements relate to the left side, while all green elements relate to the right side.}
+	\label{interact_hic}
+\end{figure}
+
+
 \FloatBarrier
 \section*{Discussion}
 
-Although it has been long recognized that conformation of chromatin is key to the regulation of gene transcription programs, features that underlie these chromatin organization-dependent transcriptional regulation mechanisms remain relatively unclear \cite{Bonev2016}⁠. Following the development of chromosome conformation capture techniques over a decade ago \cite{Dekker2002}⁠, advances in other 3C-based technologies have allowed the quantification of chromosomal interaction frequencies between genomic loci in close proximity, both locally (i.e. 3C and 4C) and genome-wide (i.e. Hi-C and ChIA-PET) \cite{Dekker2013}.
+Although it has been long recognized that chromosomal conformation has strong impact on the regulation of gene transcription programs, features that underlie the regulation of chromatin organization remain relatively unclear \cite{Bonev2016}⁠. Following the development of chromosome conformation capture techniques over a decade ago \cite{Dekker2002}⁠, advances in other 3C-based technologies have allowed the quantification of chromosomal interaction frequencies between genomic loci in close spatial proximity, both locally (i.e. 3C and 4C) and genome-wide (i.e. Hi-C and ChIA-PET) \cite{Dekker2013}.
 
-LincRNAs originating from enhancers (elincRNAs) have been shown to modulate chromosomal architecture \cite{Yin2015}⁠ and are frequently located within topologically associated domains (TADs) associated with high levels of genomic interactions (Tan et al, 2016, under revision). Here, I used publicly available genomic data to investigate the prevalence of elincRNAs regulation in modulating chromosomal architecture. Together with strong enrichment of cohesin binding at elincRNAs promoter regions and their frequent localization at loop anchors, the high amount of intra-TAD contacts associated with elincRNAs support their putative role in regulating enhancer-promoter loops. 
+LincRNAs originating from enhancers (elincRNAs) have been shown to modulate chromosomal architecture \cite{Yin2015}⁠ and are frequently located within topologically associated domains (TADs) associated with high levels of genomic interactions (Tan et al, 2016, under revision). Here, I used publicly available genomics data to investigate the prevalence of elincRNA regulation in modulating chromosomal architecture. Together with strong enrichment in cohesin binding at elincRNAs promoter regions, their frequent localization at loop anchors and high amount of intra-TAD contacts associated with elincRNAs support their putative role in regulating enhancer-promoter loops. 
 
 There is ongoing debate on the biological relevance of elincRNA transcription in particular with regards to  whether their associated regulatory roles are transcript- or transcription-dependent. Notably, the association between elincRNAs and chromosomal organization does not constitute a proof for their role in promoting contact, as it might be a consequence of the presence of active enhancers at their promoter region, rather than the elincRNA transcript itself. With this in mind and to address this key question, it would be important to perform an analysis similar to that presented here but where enhancers producing elincRNAs are compared to other active enhancers, that generally produce unstable bidirectionally-transcribed eRNAs. Ultimately, the dissection of the molecular mechanisms underlying these enhancer-associated regulation of chromosomal conformation will require genetic manipulation of elincRNA candidate transcript abundance, for example by using RNAi and inhibiting their transcription with CRISPR-Cas9 \cite{Li2013}⁠.
 
-Furthermore, extending the analysis from intra-topological domain interactions to between-TAD contacts \cite{Fraser2015}⁠, inter-chromosomal contacts, and eventually association with nuclear lamina would provide a more complete overview of elincRNA-dependent chromosomal interactions that shape the nuclear architecture. These analyses could also be performed on different cell-lines to reveal if the effect of elincRNAs in nuclear architecture is cell-line specific, or more generalized. 
+Furthermore, extending the analysis from within-topological domain interactions to between-TAD contacts \cite{Fraser2015}⁠, to inter-chromosomal contacts, and eventually to DNA associations with the nuclear lamina would provide a more complete overview of elincRNA-dependent chromosomal interactions that shape the nuclear architecture. These analyses could also be extended to additional cell-lines to reveal if the effect of elincRNAs in nuclear architecture is cell-line specific, or more generalized. 
 
-The current resolution of global chromosomal conformation capture techniques (including Hi-C) remains a limiting factor in measuring accurate interaction frequencies as it is impossible to look at contacts between elincRNAs that are smaller than the highest resolution of 5 Kb \cite{Rao2014}⁠. Instead, only an estimation of the region surrounding the gene can be measured. In addition, even at high contact resolutions, bulk Hi-C data can only provide an average estimate of all chromosomal contacts happening in a cell population, thus masking the dynamics and cell-to-cell variablility in contacts. Recently, a single-cell Hi-C protocol has been developed \cite{Nagano2013}⁠, allowing one to examine DNA contacts profiles at a single cell resolution. Such single cell techniques, combined with a higher contact resolution, would provide greater power to shed light on the impact of elincRNAs on gene expression regulation through modulating chromosome architecture.
+The current resolution of global chromosomal conformation capture techniques (including Hi-C) remains a limiting factor in measuring accurate interaction frequencies as it is presently not possible to look at contacts at elincRNAs loci that are smaller than the highest resolution (i.e. 5 Kb) \cite{Rao2014}⁠. Instead, only an estimation of the region surrounding the gene can be measured. In addition, even using data with high contact resolutions, bulk Hi-C technique can only provide an average estimate of all chromosomal contacts happening in a cell population, thus masking the dynamics and variabilities between cells. Recently, a single-cell Hi-C protocol has been developed \cite{Nagano2013}⁠, allowing one to examine DNA contacts profiles at a single cell resolution. Such single cell techniques, combined with a higher contact resolution, would provide greater power to shed light on the impact of elincRNAs on gene expression regulation through modulating chromosome architecture.
 
 \section*{Materials and methods}
 Unless stated otherwise, all statistical tests were performed using R 3.3.1 \cite{RCoreTeam2016}⁠. Overlapping of genomic elements were done using either bedtools 2.26 \cite{Quinlan2010}⁠or the “intervals” package \cite{Bourgon2015}⁠ in R. Manipulations on Hi-C contact matrices were performed using the “Matrix” package \cite{Bates2016}⁠. All positions of genetic elements used are based on the hg19 human assembly.
 
 \subsection*{elincRNA definition}
 
-LincRNAs and protein-coding genes sets were provided by Jennifer Tan (Tan et al, 2016, under revision). Generally, those sets were obtained by combining ENSEMBL annotations for the human genome (build 70) with a set of lincRNAs annotated \textit{de novo} using LCL transcriptome data obtained from the ENCODE consortium \cite{ENCODEProject2012}. The list of genes used in all analyses corresponds to genes expressed in the GM12878 human lymphoblastoid cell line. LincRNAs were classified based on overlap between their putative promoter region, defined as the 1kb region upstream from the transcription start site and predicted regulatory elements available on ENCODE \cite{ENCODEProject2012}⁠. These regulatory elements are predicted computationally from histone marks by a hidden Markov-model. Predicted active promoters and all enhancers were considered. The 2 categories of lincRNAs that are used throughout this report are elincRNAs, defined as overlapping enhancers marks but no promoters marks in their putative promoter region, and other lincRNAs defined as overlapping neither enhancer nor promoters marks in their promoter region (Figure \ref{Genome_browser}).
+LincRNAs and protein-coding genes sets were provided by Jennifer Tan (Tan et al, 2016, under revision). Generally, those sets were obtained by combining ENSEMBL annotations for the human genome (build 70) with a set of lincRNAs annotated \textit{de novo} using LCL transcriptome data obtained from the ENCODE consortium \cite{ENCODEProject2012}. The list of genes used in all analyses corresponds to genes expressed in the GM12878 human lymphoblastoid cell line. LincRNAs were classified based on overlap between their putative promoter region, defined as the 1kb region upstream from the transcription start site and predicted regulatory elements available on ENCODE \cite{ENCODEProject2012}⁠. These regulatory elements are predicted computationally from histone marks by a hidden Markov-model. Predicted active promoters and all enhancers were considered. The 2 categories of lincRNAs that are used throughout this report are elincRNAs, defined as overlapping enhancers marks but no promoters marks in their putative promoter region (Figure \ref{Genome_browser}A), and other lincRNAs defined as overlapping neither enhancer nor promoters marks in their promoter region (Figure \ref{Genome_browser}B).
 
+\subsection*{Expression levels}
 
-
-\subsection*{TAD definition}
-
-The list of TADs used in the computations was obtained from \cite{Rao2014}. They called the TADs based on Hi-C data across different human cell lines, normalized and processed with their own algorithm. Here, all the large TADs that completely encompass smaller ones were removed to preserve the signal from the boundaries of the small TADs. Boundaries from very large TADs would otherwise contain the signal from smaller TADs inside, generating noise.
-
-\subsection*{Hi-C data and normalization}
-
-Contacts were calculated using Hi-C contact matrices from \cite{Rao2014}. All computations are performed on 5kb resolution matrices constructed from all read pairs mapping to the genome with a MAPQ score of at least 30. The matrices were normalized using the KR normalization vector provided by the authors whenever possible. SQRTVC (square root vanilla coverage) was used for chromosome 9 of all cell lines, because the KR algorithm did not converge for chromosome 9 of K562 probably as a result of the high sparsity of the matrix. I chose SQRTVC as a substition for KR as the authors reported this method  to yield very close results to KR. 
-The normalization procedure consists in dividing each entry in the contact matrix M by a corresponding value in the normalization vector N:
-
-\vspace{0.2in}
-$M^*_{i,j}=\frac{M_{i,j}}{N_{KR}[\frac{i}{res}]*N_{KR}[\frac{j}{res}]}$
-\vspace{0.2in}
-
-\noindent Where $M_{i,j}$ is an entry from the raw matrix and $M^*_{i,j}$ corresponding normalized entry.
-
-\subsection*{TAD boundaries definition}
-
-Boundaries are extended from TAD borders towards the interior of TADs using a custom algorithm. The method used to define boundaries relies on the assumption that boundaries are insulated regions. In other words, there are few interactions between elements located before and those after the boundaries. The insulation is measured by sliding a diamond (Figure \ref{interact_hic}A) on every position along the matrix diagonal and computing the sum in the diamond at each position. Lower values represent more insulated regions. The size of the diamond has been set to an arbitrary threshold of 100kb, considered reasonable as the median length of filtered TADs is 140kb. 
-More formally, the algorithm can be described as sliding a diamond of width w  along the diagonal of a square matrix M of n dimensions on all positions d between w and n-(w-1). Those latter limits are set to prevent the diamond from getting out of the matrix. At each position, the sum of all values in the diamond is stored in a vector V. This can be rewritten as: 
-
-\vspace{0.2in}
-$\left\{\begin{matrix}1\leq w\leq \frac{n}{2}+1 \\ \forall d\in\left \{ w , ... , n-\left ( w-1 \right ) \right \}\end{matrix}\right. V_{d}=\sum_{i=d-(w-1)}^{d}\sum_{j=d}^{d+(w-1)}M_{i,j}$
-\vspace{0.2in}
-
-\noindent The sums from the diamond are then used to compute boundaries. For all TADs, boundaries are extended inwards from the borders as long as the value of V does not exceed an arbitrary threshold defined as the starting value (at the border) plus 10\% of the maximum value in the TAD (Figure \ref{boundary_ex}).The boundaries were filtered afterwards to remove all those extending beyond their TAD. This happened in cases where the TAD was embedded in a larger one and the border was already among the highest values in the vector V. The algorithm would need to account for background noise in order to properly process the boundaries in these special cases.
+Processed median expression data for elincRNAs and protein-coding genes in 4  different cell lines were calculated by Jennifer Tan (Tan et al, 2016, under revision) using RNA sequencing data generated by the ENCODE consortium \cite{ENCODEProject2012}. Specifically, they used the number of reads overlapping exons of lincRNAs and protein-coding genes (GENCODE version 19) to estimate the expression level (RPKM) in each sample. Genes with 0 RPKM in at least half  of the samples were not considered.
 
 \subsection*{Conservation and tissue specificity}
 
 The sequence conservation was previously calculated in exons (Tan et al, 2016, under revision) through mammalian and primate evolution using phastCons scores \cite{Siepel2005}⁠ and averaged phastCons score were used as a measure of exonic sequence conservation. Tissue specificity index ($\tau$) was computed following the described procedure in \cite{Kryuchkova2015a}, considering only genes with expression above a cutoff of 0.1 RPKM.
-
-\subsection*{Expression levels}
-
-Processed median expression data for elincRNAs and protein-coding genes in 4  different cell lines were calculated by Jennifer Tan (Tan et al, 2016, under revision) using RNA sequencing data generated by the ENCODE consortium \cite{ENCODEProject2012}.
-
-\subsection*{DNA:DNA contacts}
-
-For each gene overlapping a TAD, the mean contact inside the respective TAD was used as a measure. For single genes that overlap several TADs, the contacts are computed for each TAD independently. The mean contact in a TAD is computed by taking the arithmetic mean of all values in a square submatrix spanning from the beginning to the end of the TAD in the intrachromosomal matrix (Figure \ref{interact_hic}B).
 
 \subsection*{Chip-seq data}
 
@@ -232,6 +202,36 @@ Chip-seq peaks for CTCF, RAD21 and SMC3 in GM12878 were retrieved from the ENCOD
 All enrichment tests were performed using the genome association tester (GAT) \cite{Heger2013}⁠ version 1.2. This program allows to test if genomic segments of interest are found in a desired set of annotations more often than expected if they were distributed randomly in a workspace. All tests using lincRNAs as annotations or segments were performed using the intergenic regions of the human genome as a workspace. When testing for enrichment of anchors at boundaries, the whole genome was used as the workspace. For all tests, the number of samples was set to 10,000, the number of buckets was consequently adjusted to 270,000 and segments overlap was used as the measure.
 
 For all enrichment tests, two values are reported in the results section: Fold enrichment and q-value. The fold enrichment corresponds to the ratio of observed to average expected number of segments overlapping the given annotation, it is higher than 1 if the segment is enriched compared to random expectation, and lower than 1 if the segment is depleted. The q-value corresponds to the p-value once it has been corrected for multiple testing using false discovery rate controlled with the Benjamin-Hochberg procedure.
+
+\subsection*{TAD definition}
+
+The list of TADs used in the computations was obtained from \cite{Rao2014}. They called the TADs based on Hi-C data across different human cell lines, normalized and processed with their own algorithm. Here, all the large TADs that completely encompass smaller ones were removed to preserve the signal from the boundaries of the small TADs. Boundaries from very large TADs would otherwise contain the signal from smaller TADs inside, generating noise.
+
+\subsection*{Hi-C data and normalization}
+
+Contacts were calculated using Hi-C contact matrices from \cite{Rao2014}. All computations are performed on 5kb resolution matrices constructed from all read pairs mapping to the genome with a MAPQ score of at least 30. To correct for bias induced by chromatin accessibility and restriction sites density \cite{Rao2014}, matrices were normalized using the KR normalization vector provided by the authors whenever possible. SQRTVC (square root vanilla coverage) was used for chromosome 9 of all cell lines, because the KR algorithm did not converge for chromosome 9 of K562 probably as a result of the high sparsity of the matrix. I chose SQRTVC as a substition for KR as the authors reported this method  to yield very close results to KR. 
+The normalization procedure, as described by the authors, consists in dividing each entry in the raw contact matrix M by a corresponding value in the normalization vector N:
+
+\vspace{0.2in}
+$M^*_{i,j}=\frac{M_{i,j}}{N_{KR}[\frac{i}{res}]*N_{KR}[\frac{j}{res}]}$
+\vspace{0.2in}
+
+\noindent Where $M_{i,j}$ is an entry from the raw matrix and $M^*_{i,j}$ corresponding normalized entry.
+
+\subsection*{TAD boundaries definition}
+
+Boundaries are extended from TAD borders towards the interior of TADs using a custom algorithm. The method used to define boundaries relies on the assumption that boundaries are insulated regions. In other words, there are few interactions between elements located before and those after the boundaries. The insulation is measured by sliding a diamond (Figure \ref{interact_hic}A) on every position along the matrix diagonal and computing the sum in the diamond at each position. Lower values represent more insulated regions. The size of the diamond has been set to an arbitrary threshold of 100kb, considered reasonable as the median length of filtered TADs is 140kb. 
+The algorithm can be described as sliding a diamond of width $w$  along the diagonal of a square matrix $M$ of $n$ dimensions on all positions $d$ between $1+w$ and $n-w$. Those latter limits are set to prevent the diamond from getting out of the matrix. At each position, the sum of all values in the diamond is stored in a vector $V$. This can be rewritten as: 
+
+\vspace{0.2in}
+$\left\{\begin{matrix}1\leq w\leq \frac{n}{2} \\ \forall d\in\left \{ 1+w , ... , n-w \right \}\end{matrix}\right. V_{d}=\sum_{i=d-w}^{d}\sum_{j=d}^{d+w}M_{i,j}$
+\vspace{0.2in}
+
+\noindent The sums from the diamond are then used to compute boundaries. For all TADs, boundaries are extended inwards from the borders as long as the value of $V$ does not exceed an arbitrary threshold defined as the starting value (at the border) plus 10\% of the maximum value in the TAD (Figure \ref{interact_hic}B).The boundaries were filtered afterwards to remove all those extending beyond their TAD. This happened in cases where the border was already among the highest values in the vector $V$. This shows the algorithm is not optimal and would need be improved to properly process the boundaries in these special cases. 
+
+\subsection*{intra-TAD contacts}
+
+For each gene overlapping a TAD, the mean contact inside the respective TAD was used as a measure. For single genes that overlap several TADs, the contacts are computed for each TAD independently. The mean contact in a TAD is computed by taking the arithmetic mean of all values in a square submatrix spanning from the beginning to the end of the TAD in the intrachromosomal matrix (Figure \ref{interact_hic}B).
 
 \section*{Acknowledgements}
 I wish to thank Jennifer Yihong Tan for her precious advices and help throughout the project and writing of the report. I also wish to thank Ana Claudia Marques for her suggestions, general guidance and corrections in the report. Finally, I want to thank Adam Alexander Thil Smith for  his help with technical issues and code optimization and Maria Ferreira da Silva for her suggestions and critical reading of the report.
